@@ -1,3 +1,8 @@
+2010-10-04  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module_inventory.cc: Fixed XML generation for
+	  inventory modules.
+
 2010-08-04  Ramon Novoa  <rnovoa@artica.es>
 
 	* Makefile.am: Use -static-libstdc++ to remove the dependency on
